# mytool-rs

./: .gitignore  AUTHORS  Cargo.toml  README.md  Todo  build.rs  icons.toml  meson.build  meson_options.txt
build-aux/: .gitignore  build.sh  com.github.linruohan.mytool-rs.gschema.xml  com.github.linruohan.mytool.Devel.json  com.github.linruohan.mytool.Devel.yaml  com.github.linruohan.mytool.gschema.xml  deploy-remote.sh  inno_build.py  mytool_inno.iss.in  update-translations.sh
data/: app.desktop.in.in  app.gschema.xml.in  app.metainfo.xml.in.in  app.mimetype.xml.in  meson.build  resources.gresource.xml  window.ui
data/ui/: appmenu.ui  appwindow.ui  canvaswrapper.ui  filter_pane_row.ui  mainheader.ui  overlays.ui  sidebar.ui  style.css  todo.ui
data/ui/dialogs/: dialogs.ui
hooks/: pre-commit.hook
po/: POTFILES  README.md  en.po  zh_CN.po
src/: appmenu.rs  canvaswrapper.rs  config.rs  contextmenu.rs  env.rs  filetype.rs  globals.rs  main.rs  mainheader.rs  meson.build  myenum.rs  overlays.rs  sidebar.rs  utils.rs
src/app/: appactions.rs  mod.rs
src/appwindow/: actions.rs  appsettings.rs  imp.rs  mod.rs
src/canvas/: mod.rs
src/collection_object/: imp.rs  mod.rs
src/dialogs/: mod.rs
src/layouts/: 001.rs  filter_pane_row.rs  mod.rs
src/task_object/: imp.rs  mod.rs
src/todo/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
