[package]
name = "mytool"
version = "0.1.0"
edition = "2021"


[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0.94"
async-channel = "2.0"
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
walkdir = "2.3"
xshell = "0.2"
winresource = "0.1.17"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
once_cell = "1.19"
regex = "1.10"
futures = "0.3.30"
path-absolutize = "3.1"
palette = "0.7.6"
async-fs = "2.1"
chrono = "0.4.39"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
approx = "0.5.1"
piet = "0.7.0"
piet-cairo = "0.7.0"
rough_piet = "0.8.0"
roughr = "0.8.0"
url = "2.5"
i18n-embed-fl = "0.9.2"
relm4-icons="0.9.0"
notify-debouncer-full = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10.2", features = ["gtk4"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[build-dependencies]
glib-build-tools = "0.20"
anyhow = "1.0"

[patch.crates-io]

[profile.dev]
debug = true
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
