[package]
name = "mytool"
version = "0.1.0"
edition = "2024"


[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0.95"
async-channel = "2.3.1"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_18"] }
reqwest = { version = "0.12.11", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
walkdir = "2.5"
xshell = "0.2.7"
winresource = "0.1.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.20.2"
regex = "1.11.1"
futures = "0.3.31"
path-absolutize = "3.1"
palette = "0.7.6"
async-fs = "2.1.2"
chrono = "0.4.39"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
approx = "0.5.1"
piet = "0.7.0"
piet-cairo = "0.7.0"
rough_piet = "0.9.0"
roughr = "0.9.0"
url = "2.5"
i18n-embed-fl = "0.9.2"
notify-debouncer-full = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11.0", features = ["gtk4"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[build-dependencies]
glib-build-tools = "0.20"
anyhow = "1.0.94"

[patch.crates-io]

[profile.dev]
debug = true
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
